# project2

Client/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Client/include/: client.h
Client/src/: client.cpp  main.cpp
Server/: CMakeLists.txt
Server/include/: pollserver.h
Server/src/: main.cpp  pollserver.cpp
